Fix issues on small screens
* Ugly multiline buttons
* No margin after covers on main page
* Tweak buttons text

Closes #37

--- a/styles/components/_btn.scss
+++ b/styles/components/_btn.scss
@@ -7,10 +7,10 @@
   -webkit-appearance: normal;
   outline: none;
   background-color: transparent;
-  padding: 0 $base-spacing-unit;
-  border-radius: 100px;
+  padding: 0.6em 1em;
+  border-radius: 2em;
   font-size: $h4-size;
-  line-height: $base-spacing-unit * 2 - 2 * $border-width;
+  line-height: 1.4;
   transition: background-color $transition-easing $transition-speed,
     color $transition-easing $transition-speed;
 }
