--- a/styles/pages/_front.scss
+++ b/styles/pages/_front.scss
@@ -271,4 +271,12 @@
       max-width: 100%;
     }
   }
+  @media (max-width: 550px) {
+    .front-cover {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      float: none;
+    }
+  }
 }
